--- a/templates/indexyumai.html
+++ b/templates/indexyumai.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <title>Filtering</title>
+    <title>Stroke Predictors</title>
 </head>
 <body>
 <div id="container"></div>
